bitfields/tests/compile_error_cases/errors/arrays/array_non_u8_element_type.rs
use bitfields::bitfield;

#[bitfield([u16; 4])]
pub struct Bitfield {
    a: u64,
}

fn main() {}

