bitfields/tests/compile_error_cases/errors/arrays/array_non_u8_element_type.stderr
error: The bitfield array must have an unsigned `u8` integer type as its first argument.
 --> tests/compile_error_cases/errors/arrays/array_non_u8_element_type.rs:3:1
  |
3 | #[bitfield([u16; 4])]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)
